--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Войти</button>
         </form>
-        <p class="mt-3">Нет аккаунта? <a href="https://t.me/prosto_bots_bot" class="btn btn-success btn-sm" target="_blank">Зарегистрируйтесь через Telegram</a></p>
+        <p class="mt-3">Нет аккаунта? <a href="https://t.me/prosto_bots_admin_bot" class="btn btn-success btn-sm" target="_blank">Зарегистрируйтесь через Telegram</a></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
