--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -15,7 +15,7 @@
                     <a class="nav-link" href="/bots">Мои боты</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/bots/balance">Баланс</a>
+                    <a class="nav-link" href="/balance">Баланс</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
