--- a/templates/bots.html
+++ b/templates/bots.html
@@ -56,7 +56,7 @@
         <div class="d-flex align-items-center mb-4">
             <h1 class="me-3">Мои боты</h1>
             <p class="mb-0 me-3">Баланс: {{ user.balance }} руб. {% if not trial_active %} (Пробный период истек) {% endif %}</p>
-            <a href="/bots/balance" class="btn btn-success">Пополнить баланс</a>
+            <a href="/balance" class="btn btn-success">Пополнить баланс</a>
         </div>
         {% if bots %}
         <table class="table">
